--- a/style.css
+++ b/style.css
@@ -10,6 +10,21 @@ body {
 	color: #1d1d1d;
 }
 
+#mychart {
+	width: 100%;
+	height: 100px;
+	background-color: rgb(167, 215, 245);
+	align-items: center;
+}
+
+
+#mychart2 {
+	width: 100%;
+	height: 100px;
+	background-color: rgb(248, 182, 182);
+	align-items: center;
+}
+
 .container {
 	width: 90%;
 	max-width: 1000px;
