--- a/style.css
+++ b/style.css
@@ -4,16 +4,23 @@
 	box-sizing: border-box;
 }
 
+:root {
+	--background-grafico1: rgb(167, 215, 245);
+	--background-grafico2: rgb(248, 182, 182);
+	--background-color: #999999;
+	--background-body: #e0e0e0;
+}
+
 body {
 	font-family: 'Montserrat', sans-serif;
-	background: #e0e0e0;
+	background-color: var(--background-body);
 	color: #1d1d1d;
 }
 
 #mychart {
 	width: 100%;
 	height: 100px;
-	background-color: rgb(167, 215, 245);
+	background-color: var(--background-grafico1);
 	align-items: center;
 }
 
@@ -21,7 +28,7 @@ body {
 #mychart2 {
 	width: 100%;
 	height: 100px;
-	background-color: rgb(248, 182, 182);
+	background-color:var(--background-grafico2);
 	align-items: center;
 }
 
