se crea paginacion para las peliculas hasta 7 paginas soliciando en cada pagina las 20 peliculas mas populares, segun la informacion de la API se puede crear hasta 1000 paginas; ademas se crea un boton que nos lleva a el Dashboar donde se visualizan 2 graficas : una cin el Top 10 de las peliculas mas votadas(barra) y otra co el top 10 de las pelicula mas populares(radio)

--- a/style.css
+++ b/style.css
@@ -83,8 +83,59 @@ body {
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 600;
 	transition: .3s ease all;
+	font-size: 20px;
 }
 
 .pagination button:hover {
 	background: #137c32;
+}
+
+h1 {  
+
+	color: #fff;
+	background-color:#100a1f ;
+	display:flex;
+    justify-content: center;
+    align-items: center;
+	height: 100px;
+	font-size: 50px;
+	font-family:Verdana, Geneva, Tahoma, sans-serif
+
+}
+
+.loadButton button {
+
+	cursor: pointer;
+	border: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	height: 50px;
+	width: 200px;
+	background: #241744;
+	color: #fff;
+	border-radius: 100px;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 600;
+	transition: .3s ease all;
+	font-size: 30px;
+	
+
+}
+
+.loadButton button:hover {
+
+	background: #137c32;
+}
+
+.loadButton{
+	position: fixed;
+	bottom: 0;
+	background: #100a1f;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	gap: 20px;
+	padding: 10px;
 }
